crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__frame_expanded_gone.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
05 00 00 00 03 02 72 39 02
