crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__frame_snapshot.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
e3 03 00 00 00 01 07 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 74 17 0b 63 6c 61 75 64 65 2d
63 6f 64 65 07 32 2e 31 2e 32 38 36 08 35 65 35
35 31 30 35 65 05 2f 77 6f 72 6b 0d 46 69 78 20
74 68 65 20 62 75 69 6c 64 01 10 00 00 00 00 00
00 00 00 00 00 00 00 00 00 5e 55 01 10 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 9a 07 74 6f
6f 6c 75 5f 31 08 73 75 62 61 67 65 6e 74 01 10
00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 f0
01 02 08 6f 62 73 65 72 76 65 64 02 05 71 75 65
75 65 05 73 74 65 65 72 01 04 6f 70 75 73 04 4f
70 75 73 01 04 70 6c 61 6e 04 50 6c 61 6e 01 20
52 65 61 64 73 20 61 6e 64 20 70 6c 61 6e 73 2c
20 63 68 61 6e 67 65 73 20 6e 6f 74 68 69 6e 67
01 04 68 69 67 68 04 48 69 67 68 01 0d 54 68 69
6e 6b 73 20 6c 6f 6e 67 65 72 01 06 62 72 61 6e
63 68 04 6d 61 69 6e e8 07 03 01 0a 70 65 72 6d
69 73 73 69 6f 6e 17 57 61 6e 74 73 20 74 6f 20
72 75 6e 20 63 61 72 67 6f 20 74 65 73 74 00 d0
0f 01 01 01 02 75 31 00 dc 0b 00 02 05 69 6e 70
75 74 0c 06 6f 75 74 70 75 74 14 01 0f 63 6c 61
75 64 65 2d 6f 70 75 73 2d 35 2d 35 03 01 01 08
34 62 38 32 35 64 63 36 00 03 02 75 31 01 c0 0c
00 06 66 69 78 20 69 74 01 06 00 01 04 61 66 31
33 09 69 6d 61 67 65 2f 70 6e 67 80 10 40 20 04
72 31 23 30 00 01 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 01 e7 02 61 31 01 c0 0c 01 06 4f
6e 20 69 74 2e 01 06 00 07 74 6f 6f 6c 75 5f 32
01 c0 0c 03 04 42 61 73 68 04 65 78 65 63 0e 52
75 6e 20 63 61 72 67 6f 20 74 65 73 74 18 7b 22
63 6f 6d 6d 61 6e 64 22 3a 22 63 61 72 67 6f 20
74 65 73 74 22 7d 01 18 00 02 01 03 6f 6b 0a 01
03 00 00 00 00 00 00 01 05 61 73 6b 2d 31 01 07
74 6f 6f 6c 75 5f 32 08 61 70 70 72 6f 76 61 6c
0f 52 75 6e 20 63 61 72 67 6f 20 74 65 73 74 3f
01 16 63 61 72 67 6f 20 74 65 73 74 20 2d 2d 77
6f 72 6b 73 70 61 63 65 01 16 00 03 05 61 6c 6c
6f 77 05 41 6c 6c 6f 77 00 00 00 06 61 6c 77 61
79 73 0c 41 6c 77 61 79 73 20 61 6c 6c 6f 77 00
01 12 42 61 73 68 28 63 61 72 67 6f 20 74 65 73
74 3a 2a 29 00 04 64 65 6e 79 02 4e 6f 01 00 01
00 01 01 01 01 01 01 01 0b 66 6e 20 6d 61 69 6e
28 29 20 7b 02 02 2d 61 02 2b 62 01 01 00 00 00
00 00 a4 0d 01 84 e2 03 01 10 00 00 00 00 00 00
00 00 00 00 00 00 00 00 01 e7 0c 61 6e 64 20 74
68 65 20 64 6f 63 73 01 21 2f 55 73 65 72 73 2f
6d 65 2f 2e 73 6c 6f 70 74 79 2f 64 72 6f 70 2f
78 2f 73 68 6f 74 2e 70 6e 67 01 00 00 00 01 08
4f 70 75 73 20 35 2e 35 01 0f 63 6c 61 75 64 65
2d 6f 70 75 73 2d 35 2d 35 01 07 64 65 66 61 75
6c 74 01 04 68 69 67 68 01 90 c8 02 01 c0 9a 0c
01 09 66 69 76 65 2d 68 6f 75 72 e2 09 01 63 00
01 01 22 4d 61 6b 65 20 74 68 65 20 70 61 72 73
65 72 20 70 61 73 73 20 65 76 65 72 79 20 66 69
78 74 75 72 65 06 61 63 74 69 76 65 a8 c0 02 01
a0 c2 1e fc 02 88 0e 01 00 92 21 09 73 69 6d 75
6c 61 74 6f 72 1b 53 69 6d 75 6c 61 74 6f 72 20
e2 80 94 20 69 50 68 6f 6e 65 20 31 37 20 50 72
6f 80 ec e2 c9 a1 32 01 00 2a 1e 68 74 74 70 73
3a 2f 2f 67 69 74 68 75 62 2e 63 6f 6d 2f 6f 2f
72 2f 70 75 6c 6c 2f 34 32 0d 46 69 78 20 74 68
65 20 6c 6f 67 69 6e 04 6d 61 69 6e 03 01 01 04
6c 69 6e 74 01 00 00
