crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__frame_tool_details.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
07 07 00 00 02 00 0c 07 74 6f 6f 6c 75 5f 39 01
c0 0c 03 04 42 61 73 68 05 6f 74 68 65 72 0e 52
75 6e 20 63 61 72 67 6f 20 74 65 73 74 18 7b 22
63 6f 6d 6d 61 6e 64 22 3a 22 63 61 72 67 6f 20
74 65 73 74 22 7d 01 18 00 02 01 03 6f 6b 0a 01
03 00 01 04 61 66 31 33 09 69 6d 61 67 65 2f 70
6e 67 80 10 40 20 04 72 31 23 30 01 00 0a 73 72
63 2f 6c 69 62 2e 72 73 01 00 01 01 01 01 01 02
02 2d 61 02 2b 62 01 01 00 00 01 10 00 00 00 00
00 00 00 00 00 00 00 00 00 00 74 17 01 07 07 74
6f 6f 6c 75 5f 39 01 c0 0c 03 04 42 61 73 68 05
6f 74 68 65 72 0e 52 75 6e 20 63 61 72 67 6f 20
74 65 73 74 18 7b 22 63 6f 6d 6d 61 6e 64 22 3a
22 63 61 72 67 6f 20 74 65 73 74 22 7d 01 18 00
02 01 03 6f 6b 0a 01 03 00 01 04 61 66 31 33 09
69 6d 61 67 65 2f 70 6e 67 80 10 40 20 04 72 31
23 30 01 01 05 61 2e 74 78 74 03 01 01 00 00 00
00 00 01 10 00 00 00 00 00 00 00 00 00 00 00 00
00 00 74 17 01 07 07 74 6f 6f 6c 75 5f 39 01 c0
0c 03 04 42 61 73 68 05 6f 74 68 65 72 0e 52 75
6e 20 63 61 72 67 6f 20 74 65 73 74 18 7b 22 63
6f 6d 6d 61 6e 64 22 3a 22 63 61 72 67 6f 20 74
65 73 74 22 7d 01 18 00 02 01 03 6f 6b 0a 01 03
00 01 04 61 66 31 33 09 69 6d 61 67 65 2f 70 6e
67 80 10 40 20 04 72 31 23 30 01 02 05 61 2e 74
78 74 01 01 01 32 01 03 01 03 01 10 00 00 00 00
00 00 00 00 00 00 00 00 00 00 74 17 01 07 07 74
6f 6f 6c 75 5f 39 01 c0 0c 03 04 42 61 73 68 05
6f 74 68 65 72 0e 52 75 6e 20 63 61 72 67 6f 20
74 65 73 74 18 7b 22 63 6f 6d 6d 61 6e 64 22 3a
22 63 61 72 67 6f 20 74 65 73 74 22 7d 01 18 00
02 01 03 6f 6b 0a 01 03 00 01 04 61 66 31 33 09
69 6d 61 67 65 2f 70 6e 67 80 10 40 20 04 72 31
23 30 01 03 07 66 6e 20 6d 61 69 6e 01 03 73 72
63 01 04 2a 2e 72 73 01 02 01 04 00 01 10 00 00
00 00 00 00 00 00 00 00 00 00 00 00 74 17 01 07
07 74 6f 6f 6c 75 5f 39 01 c0 0c 03 04 42 61 73
68 05 6f 74 68 65 72 0e 52 75 6e 20 63 61 72 67
6f 20 74 65 73 74 18 7b 22 63 6f 6d 6d 61 6e 64
22 3a 22 63 61 72 67 6f 20 74 65 73 74 22 7d 01
18 00 02 01 03 6f 6b 0a 01 03 00 01 04 61 66 31
33 09 69 6d 61 67 65 2f 70 6e 67 80 10 40 20 04
72 31 23 30 01 04 0a 63 61 72 67 6f 20 74 65 73
74 01 0a 00 01 0d 52 75 6e 20 74 68 65 20 74 65
73 74 73 01 05 2f 77 6f 72 6b 01 01 02 62 31 02
01 ca 01 01 05 65 72 72 6f 72 01 05 00 01 b0 09
01 10 00 00 00 00 00 00 00 00 00 00 00 00 00 00
74 17 01 07 07 74 6f 6f 6c 75 5f 39 01 c0 0c 03
04 42 61 73 68 05 6f 74 68 65 72 0e 52 75 6e 20
63 61 72 67 6f 20 74 65 73 74 18 7b 22 63 6f 6d
6d 61 6e 64 22 3a 22 63 61 72 67 6f 20 74 65 73
74 22 7d 01 18 00 02 01 03 6f 6b 0a 01 03 00 01
04 61 66 31 33 09 69 6d 61 67 65 2f 70 6e 67 80
10 40 20 04 72 31 23 30 01 05 13 68 74 74 70 73
3a 2f 2f 65 78 61 6d 70 6c 65 2e 63 6f 6d 00 01
c8 01 01 80 04 01 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 01 07 07 74 6f 6f 6c 75 5f
39 01 c0 0c 03 04 42 61 73 68 05 6f 74 68 65 72
0e 52 75 6e 20 63 61 72 67 6f 20 74 65 73 74 18
7b 22 63 6f 6d 6d 61 6e 64 22 3a 22 63 61 72 67
6f 20 74 65 73 74 22 7d 01 18 00 02 01 03 6f 6b
0a 01 03 00 01 04 61 66 31 33 09 69 6d 61 67 65
2f 70 6e 67 80 10 40 20 04 72 31 23 30 01 06 04
67 70 75 69 01 01 01 04 47 50 55 49 0f 68 74 74
70 73 3a 2f 2f 67 70 75 69 2e 72 73 01 10 00 00
00 00 00 00 00 00 00 00 00 00 00 00 74 17 01 07
07 74 6f 6f 6c 75 5f 39 01 c0 0c 03 04 42 61 73
68 05 6f 74 68 65 72 0e 52 75 6e 20 63 61 72 67
6f 20 74 65 73 74 18 7b 22 63 6f 6d 6d 61 6e 64
22 3a 22 63 61 72 67 6f 20 74 65 73 74 22 7d 01
18 00 02 01 03 6f 6b 0a 01 03 00 01 04 61 66 31
33 09 69 6d 61 67 65 2f 70 6e 67 80 10 40 20 04
72 31 23 30 01 07 01 0f 67 65 6e 65 72 61 6c 2d
70 75 72 70 6f 73 65 01 04 4c 6f 6f 6b 0b 6c 6f
6f 6b 20 61 72 6f 75 6e 64 01 0b 00 00 01 08 66
6f 75 6e 64 20 69 74 01 08 00 01 20 01 00 01 2e
01 10 00 00 00 00 00 00 00 00 00 00 00 00 00 00
74 17 01 07 07 74 6f 6f 6c 75 5f 39 01 c0 0c 03
04 42 61 73 68 05 6f 74 68 65 72 0e 52 75 6e 20
63 61 72 67 6f 20 74 65 73 74 18 7b 22 63 6f 6d
6d 61 6e 64 22 3a 22 63 61 72 67 6f 20 74 65 73
74 22 7d 01 18 00 02 01 03 6f 6b 0a 01 03 00 01
04 61 66 31 33 09 69 6d 61 67 65 2f 70 6e 67 80
10 40 20 04 72 31 23 30 01 08 01 06 57 68 69 63
68 3f 01 04 50 69 63 6b 01 01 41 00 00 01 06 57
68 69 63 68 3f 01 41 01 10 00 00 00 00 00 00 00
00 00 00 00 00 00 00 74 17 01 07 07 74 6f 6f 6c
75 5f 39 01 c0 0c 03 04 42 61 73 68 05 6f 74 68
65 72 0e 52 75 6e 20 63 61 72 67 6f 20 74 65 73
74 18 7b 22 63 6f 6d 6d 61 6e 64 22 3a 22 63 61
72 67 6f 20 74 65 73 74 22 7d 01 18 00 02 01 03
6f 6b 0a 01 03 00 01 04 61 66 31 33 09 69 6d 61
67 65 2f 70 6e 67 80 10 40 20 04 72 31 23 30 01
09 08 31 2e 20 62 75 69 6c 64 01 08 00 01 10 00
00 00 00 00 00 00 00 00 00 00 00 00 00 74 17 01
07 07 74 6f 6f 6c 75 5f 39 01 c0 0c 03 04 42 61
73 68 05 6f 74 68 65 72 0e 52 75 6e 20 63 61 72
67 6f 20 74 65 73 74 18 7b 22 63 6f 6d 6d 61 6e
64 22 3a 22 63 61 72 67 6f 20 74 65 73 74 22 7d
01 18 00 02 01 03 6f 6b 0a 01 03 00 01 04 61 66
31 33 09 69 6d 61 67 65 2f 70 6e 67 80 10 40 20
04 72 31 23 30 01 0a 01 00 05 42 75 69 6c 64 07
70 65 6e 64 69 6e 67 01 01 10 00 00 00 00 00 00
00 00 00 00 00 00 00 00 74 17 01 07 07 74 6f 6f
6c 75 5f 39 01 c0 0c 03 04 42 61 73 68 05 6f 74
68 65 72 0e 52 75 6e 20 63 61 72 67 6f 20 74 65
73 74 18 7b 22 63 6f 6d 6d 61 6e 64 22 3a 22 63
61 72 67 6f 20 74 65 73 74 22 7d 01 18 00 02 01
03 6f 6b 0a 01 03 00 01 04 61 66 31 33 09 69 6d
61 67 65 2f 70 6e 67 80 10 40 20 04 72 31 23 30
01 0b 06 67 69 74 68 75 62 0c 63 72 65 61 74 65
5f 69 73 73 75 65 01 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 74 17 01 07 00
