crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_answer_edited.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
60 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 06 05 61 73 6b 2d 31 34 7b
22 61 6c 6c 6f 77 2d 65 64 69 74 65 64 22 3a 7b
22 6e 65 77 5f 73 74 72 69 6e 67 22 3a 22 66 6e
20 62 28 29 20 2d 3e 20 75 38 20 7b 20 31 20 7d
22 7d 7d 00
