crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__intent_draft.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
33 00 00 00 06 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 01 e7 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17 17 0e 61 6e 64 20 74 68 65
20 52 45 41 44 4d 45
